# self-evolving-dev-ecosystem

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EXECUTION-PLAN-L2-FINAL.md  EXECUTION-PLAN-L2.md  EXECUTION-PLAN.md  IMPLEMENTATION.md  LEARNINGS.md  LICENSE  PLAN-L3.5-EFFECTOR.md  PLAN-L4-HARDENING.md  PLAN-L5-DIGITAL-TWIN.md  PLAN.md  README.md  STARTING-PROMPT.md  TASKS.md
.github/workflows/: ci.yml  release.yml
REPORTS/: weekly-errors-2026-05-04.md
crates/client/: Cargo.toml
crates/client/src/: cmd_backfill.rs  cmd_stats.rs  main.rs
crates/cortex/: Cargo.toml
crates/cortex/src/: apply.rs  context.rs  context_detector.rs  error_classifier.rs  lib.rs  pattern_engine.rs  redact.rs  style.rs  suggest.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: clipboard.rs  daemon.rs  error_subscriber.rs  event_bus.rs  ipc.rs  lib.rs  main.rs  metrics.rs  notify.rs  ollama_subscriber.rs
crates/daemon/src/sensors/: file.rs
crates/daemon/tests/: apply_test.rs  error_subscriber_test.rs  errors_test.rs  event_ingest_test.rs  file_watcher_test.rs  integration_test.rs  ipc_test.rs  logging_test.rs  m7_multi_block_test.rs  m8_redaction_chain_test.rs  ollama_integration_test.rs  ollama_subscriber_dedupe_test.rs  profile_refresh_test.rs  shutdown_test.rs  smoke_test.rs  window_dedupe_test.rs
crates/knowledge/: Cargo.toml
crates/knowledge/src/: lib.rs  migrate.rs  store.rs  types.rs
crates/ollama/: Cargo.toml
crates/ollama/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: events.rs  lib.rs  messages.rs  metrics.rs
scripts/: com.organism.daemon.plist  install.sh  organism-shell-hook.zsh  quick-install.sh  quick-uninstall.sh  test-install.sh  uninstall.sh
