[workspace]
members = [
    "crates/protocol",
    "crates/knowledge",
    "crates/cortex",
    "crates/daemon",
    "crates/client",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
regex = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
