[package]
name = "organism-cortex"
version = "0.1.0"
edition = "2021"

[dependencies]
organism-protocol = { path = "../protocol" }
organism-knowledge = { path = "../knowledge" }
organism-ollama = { path = "../ollama" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
